Bug #3000 replicate-wild-*-table=db.% does not apply to ALTER DATABASE
Submitted: 28 Feb 2004 7:33 Modified: 28 Feb 2004 15:38
Reporter: Guilhem Bichot
Status: Closed
Category:Server: Replication Severity:S3 (Non-critical)
Version:4.1 OS:Any (all)
Assigned to: Guilhem Bichot Target Version:

[28 Feb 2004 7:33] Guilhem Bichot
Description:
It should, as it does for CREATE DATABASE and DROP DATABASE.

How to repeat:
see description
[28 Feb 2004 15:38] Guilhem Bichot
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Fixed in ChangeSet@1.1696.28.4, 2004-02-28 22:22:29+01:00, guilhem@mysql.com