Fix for BUG#3000: "replicate-wild-*-table=db.% does not apply to ALTER DATABASE" apply replicate-* rules to ALTER DATABASE like we already do for CREATE DATABASE/ DROP DATABASE.

sql/sql_parse.cc:
  apply replicate-* rules to ALTER DATABASE like we already do
  for CREATE DATABASE/ DROP DATABASE.